--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -13,6 +13,7 @@
     </mat-form-field>
     <app-error-messages [ctrl]="loginForm.get('password')"></app-error-messages>
 
-    <button type="submit" mat-raised-button color="primary" (click)="login()">Login</button>
   </form>
+  <button mat-raised-button color="primary" (click)="login()">Login</button>
+  <button mat-button (click)="register()">Register</button>
 </div>
