--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <mat-toolbar>
   <mat-toolbar-row>
     <span class="nav-title" style="margin-right: 1em;">DataMoney </span>
+    <button mat-button *ngIf="authService.isLoggedIn()" [routerLink]="['/user/profile']">Profile</button>
+    <button mat-button *ngIf="authService.isLoggedIn()" [routerLink]="['/offer/data']">Offer Data</button>
+    <button mat-button *ngIf="authService.isLoggedIn()" [routerLink]="['/offer/market']">Marketplace</button>
     <span class="spacer"></span>
     <button mat-button *ngIf="authService.isLoggedIn()" (click)="logout()">Logout</button>
     <button mat-button *ngIf="!authService.isLoggedIn()" (click)="login()">Login</button>
