finalized get data

--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -1,9 +1,9 @@
 <h1>Datasets</h1>
-<div *ngFor="let dataSet of dataSets">
-  <mat-card style="margin: 5px;">
-    <mat-card-title>{{dataSet.hash}}</mat-card-title>
-    {{dataSet.rawData}}
-  </mat-card>
+<div *ngFor="let dataSet of dataSets | async">
+    <mat-card style="margin: 5px;">
+        <mat-card-title>{{dataSet.hash}}</mat-card-title>
+        {{dataSet.rawData}}
+    </mat-card>
 
 </div>
 <button mat-raised-button color="primary" [routerLink]="['../patient']">Create Data</button>
