First draft of offers and marketplace and refactor getFilesFromDir

--- a/src/app/offer/marketplace/marketplace.component.html
+++ b/src/app/offer/marketplace/marketplace.component.html
@@ -1,1 +1,6 @@
-<p>marketplace works!</p>
+<div class="marketplace">
+
+  <div class="offer" *ngFor="let offer of offers | async">
+    {{offer | json}}
+  </div>
+</div>
